fixed extraMessage alignment (i belive)

--- a/src/Components/Quiz/QuizComponent.css
+++ b/src/Components/Quiz/QuizComponent.css
@@ -215,7 +215,7 @@ input[type="radio"] {
     background: #577ae7;
     width: 100%;
     padding: 3%;
-    font-size: 140%;
+    font-size: 120%;
     color: white;
 }
 
